--- a/RabbitMqTestNotifications.Server/App.xaml
+++ b/RabbitMqTestNotifications.Server/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="RabbitMqTestNotifications.Server.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RabbitMqTestNotifications.Server"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:RabbitMqTestNotifications.Server">
     <Application.Resources>
          
     </Application.Resources>
