--- a/RabbitMqTestNotifications.Server/Views/MessageView.xaml
+++ b/RabbitMqTestNotifications.Server/Views/MessageView.xaml
@@ -5,9 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:RabbitMqTestNotifications.Server.Views"
              xmlns:core="clr-namespace:RabbitMqTestNotifications.Core;assembly=RabbitMqTestNotifications.Core"
-             xmlns:customResources="clr-namespace:RabbitMqTestNotifications.Server.CustomResources"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:customResources="clr-namespace:RabbitMqTestNotifications.Server.CustomResources">
     <UserControl.Resources>
         <DataTemplate x:Key="MessageBaseTemplate" DataType="core:MessageBase">
             <Grid>
